# InterLoop

./: CMakeLists.txt  InterLoop.cpp  Readme.md
include/argparse/: argparse.hpp
include/bedpe/: bedpe.h  bedpeNode.h
include/io/: io.h
include/logger/: logger.h
include/share/: global_def.h
include/solver/: freeloop.h
include/view/: view.h
res/: dataset_6_gold.bedpe  example_golden.bedpe  example_test.bedpe
src/bedpe/: bedpe.cpp  bedpeNode.cpp
src/benchmark/: test_acc.cpp
src/io/: io.cpp
src/logger/: logger.cpp
src/solver/: freeloop.cpp
src/view/: view.cpp
